# davo-ai

./: .env.dev  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  SESSION_STATUS.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
data/kb/: INDEX.md
data/kb/conditions/: red_flags.md
data/kb/drugs/: ethambutol.md  isoniazid.md  pyrazinamide.md  rifampicin.md
data/synthetic/: cohort.json  cohort_features.csv  seed_patients.sql
data/tb_pills/: COLLECTION_REPORT.md  dataset.yaml  download_batch.sh  download_batch2.sh
data/tb_pills/combo_fdc/: metadata.json
data/tb_pills/ethambutol/: metadata.json
data/tb_pills/isoniazid/: metadata.json
data/tb_pills/pyrazinamide/: metadata.json
data/tb_pills/rifampicin/: metadata.json
docs/: ARCHITECTURE.md  DATASET_ANNOTATION.md  HACKATHON_RUNBOOK.md  PITCH_UZ.md  QA_AUDIT.md
infra/: start-public-demo.sh
infra/db/: schema.sql
infra/docker/: docker-compose.yml
infra/inference/: setup_dgx_spark.sh  setup_vast_ai.sh
infra/kaggle/: davoai-inference.ipynb  kernel-metadata.json  listen-tunnel.sh
infra/yolo-weights/: deploy-yolo-local.sh
scripts/: generate_pitch_uz.py  generate_synthetic.py  prepare_yolo_dataset.py  synthesize_demo_video.py  train_yolo.py
