# Davo-AI · Python tooling configuration
[project]
name = "davo-ai"
version = "0.1.0"
description = "TB VOT replacement via Telegram + local AI on DGX Spark"
authors = [
  { name = "MindTech", email = "noreply@mindtech.example" }
]
requires-python = ">=3.11"

# ─── Ruff (linter + formatter) ───────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".venv",
  "data/",
  "runs/",
  "checkpoints/",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
  "PT",  # pytest-style
]
ignore = [
  "E501",  # line too long — formatter handles
  "B008",  # function calls in defaults (FastAPI Depends)
  "RUF001", # cyrillic vs latin chars (мы намеренно используем русский в комментариях)
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "PT011", "PT006"]
"scripts/**/*.py" = ["I"]

# ─── Pyright (type checker) ──────────────────────────────────────────
[tool.pyright]
include = ["packages/bot", "packages/inference", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "data", "runs"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = false

# ─── Pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--tb=short",
]
asyncio_mode = "auto"
markers = [
  "slow: помечает медленные тесты (skip с -m 'not slow')",
  "integration: требует поднятых внешних сервисов",
]
